--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -315,26 +315,37 @@ ul {
   width: 100%;
 }
 
+.header .header-pre-mobile {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
 .header .hamburger {
-  display: none;
-  background: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 30px;
+  height: 24px;
+  background: transparent;
   border: none;
   cursor: pointer;
-  padding: 0.5rem;
+  padding: 0;
   z-index: 1001;
 }
 
 .header .hamburger span {
   display: block;
-  width: 25px;
-  height: 2px;
-  background-color: var(--dark-color);
-  margin: 5px 0;
-  transition: var(--transition);
+  width: 100%;
+  height: 3px;
+  background-color: var(--primary-color);
+  transition: all 0.3s ease;
+  transform-origin: center;
 }
 
 .header .hamburger.active span:nth-child(1) {
-  transform: rotate(45deg) translate(5px, 5px);
+  transform: translateY(10px) rotate(45deg);
 }
 
 .header .hamburger.active span:nth-child(2) {
@@ -342,7 +353,13 @@ ul {
 }
 
 .header .hamburger.active span:nth-child(3) {
-  transform: rotate(-45deg) translate(7px, -6px);
+  transform: translateY(-10px) rotate(-45deg);
+}
+
+@media (min-width: 993px) {
+  .header .hamburger {
+    display: none;
+  }
 }
 
 /* Hero section */
