--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -401,7 +401,7 @@ ul {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url("../img/bg.png") no-repeat center center/cover;
+  background: url("../img/background.jpg") no-repeat center center/cover;
   z-index: -1;
 }
 
